--- a/src/globals.css
+++ b/src/globals.css
@@ -10,7 +10,7 @@
         @apply w-screen max-h-40;
     }
     .response-text {
-        @apply font-semibold text-center p-6 mt-10 text-4xl
+        @apply font-semibold text-center p-6 mt-10 text-4xl;
     }
 }
 
